# Jellyfish

./: .gitignore
backend/: .env.example  README.md  init_db.py  pyproject.toml
backend/app/api/v1/routes/studio/: image_tasks.py
backend/app/core/: db.py
backend/app/models/: __init__.py  llm.py  studio.py
docs/: MoneyPrinterTurbo.ipynb
front/src/pages/aiStudio/project/ProjectWorkbench/hooks/: useProjectData.ts
front/src/pages/aiStudio/project/ProjectWorkbench/tabs/: ChaptersTab.tsx
