[project]
name = "jellyfish-backend"
version = "0.1.0"
description = "Jellyfish AI 短剧工厂 - 后端 API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "aiomysql>=0.3.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "langchain-openai>=0.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "langchain-openai>=0.2.0",
]

[tool.pytest.ini_options]
markers = [
    "integration: mark test as integration (e.g. real LLM); run with -m integration when OPENAI_API_KEY is set",
]

[tool.basedpyright]
venvPath = "."
venv = ".venv"
executionEnvironments = [{ root = "." }]
